<project xmlns="http://maven.apache.org/POM/4.0.0"
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>br.rosa</groupId>
   <artifactId>rgatling</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>vamos que vamos</name>
   <description>noixxxx</description>

   <properties>
      <maven.compiler.source>17</maven.compiler.source>
      <maven.compiler.target>17</maven.compiler.target>
   </properties>

   <dependencies>
      <dependency>
         <groupId>io.gatling</groupId>
         <artifactId>gatling-app</artifactId>
         <version>3.7.2</version>
      </dependency>
      <dependency>
         <groupId>io.gatling.highcharts</groupId>
         <artifactId>gatling-charts-highcharts</artifactId>
         <version>3.7.2</version>
      </dependency>
   </dependencies>

   <build>
      <plugins>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>3.0.0</version>
            <configuration>
               <argLine>--add-opens=java.base/java.lang=ALL-UNNAMED</argLine>
            </configuration>
         </plugin>
         <plugin>
            <groupId>io.gatling</groupId>
            <artifactId>gatling-maven-plugin</artifactId>
            <version>4.2.9</version> <!-- Use the latest version -->
            <configuration>
               <simulationClass>br.rosa.rgatling.Noix</simulationClass>
            </configuration>
         </plugin>
      </plugins>
   </build>

</project>